<resources>
    <string name="app_name">HW 03</string>
    <string name="add_movie">Add Movie</string>
    <string name="edit_label">Edit</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="show_year">Show List By Year</string>
    <string name="show_rating">Show List By Rating</string>
    <string name="name">Name: </string>
    <string name="description">Description: </string>
    <string name="genre">Genre:</string>
    <string name="hint">Select</string>
    <string name="rating">Rating:</string>
    <string name="year">Year:</string>
    <string name="imdb">IMDB:</string>
    <string name="save_label">Save Changes</string>
    <string name="title_label">Title:</string>
    <string name="movies_by_year_label">Movies by Year</string>
    <string name="finish_btn">Finish</string>
    <string name="movies_by_rating_label" >Movies by Rating</string>
</resources>
