<?xml version="1.0" encoding="utf-8"?>

<!--
    ************************ Assignment #HOMEWORK 03 *******************************************
    *********************** File Name- activity_add_movie.xml *************************************
    ************************ Full Name- 1. Manali Ghare 2. Anup Deshpande (Group 19) ***********
-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_movie">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="32dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="48dp"
        android:text="@string/name"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="Enter Name"
        android:inputType="textPersonName"
        android:maxLength="50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_label"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/desc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:text="@string/description"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/name_label"
        app:layout_constraintTop_toBottomOf="@id/name_label" />

    <EditText
        android:id="@+id/desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="05dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLength="1000"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/desc_label"
        app:layout_constraintTop_toBottomOf="@id/desc_label" />

    <TextView
        android:id="@+id/genre_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/genre"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/desc"
        app:layout_constraintTop_toBottomOf="@id/desc" />

    <Spinner
        android:id="@+id/genre"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="37dp"
        android:entries="@array/genre_array"
        app:layout_constraintEnd_toEndOf="@id/desc"
        app:layout_constraintLeft_toRightOf="@id/genre_label"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/desc" />

    <TextView
        android:id="@+id/rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/rating"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/genre_label"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <SeekBar
        android:id="@+id/rating_seekBar"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:max="5"
        android:min="0"
        app:layout_constraintStart_toStartOf="@id/genre"
        app:layout_constraintTop_toBottomOf="@id/genre"

        />

    <TextView
        android:id="@+id/show_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="0"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/genre"
        app:layout_constraintLeft_toRightOf="@id/rating_seekBar"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/year"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/rating_label"
        app:layout_constraintTop_toBottomOf="@id/rating_label" />

    <EditText
        android:id="@+id/year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="Enter Year"
        android:inputType="number"
        android:maxLength="4"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/rating_seekBar"
        app:layout_constraintTop_toBottomOf="@id/rating_seekBar" />

    <TextView
        android:id="@+id/IMDB_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/imdb"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/year_label"
        app:layout_constraintTop_toBottomOf="@id/year_label" />

    <EditText
        android:id="@+id/imdb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Enter IMDB Link"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/year"
        app:layout_constraintStart_toStartOf="@id/year"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <Button
        android:id="@+id/add_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="44dp"
        android:paddingBottom="15dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="15dp"
        android:text="@string/add_movie"
        android:textAllCaps="false"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/imdb"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@id/IMDB_label"
        app:layout_constraintTop_toBottomOf="@+id/imdb"
        app:layout_constraintVertical_bias="0.22" />

</android.support.constraint.ConstraintLayout>